Add frontmatter tag so that we get roman numerals

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -64,6 +64,7 @@ format:
       text: |
         \usepackage{fvextra}
         \DefineVerbatimEnvironment{Highlighting}{Verbatim}{breaklines,commandchars=\\\{\}}
+        \frontmatter
     include-before-body:
       text: |
         \RecustomVerbatimEnvironment{verbatim}{Verbatim}{
