--- a/_quarto.yml
+++ b/_quarto.yml
@@ -47,8 +47,8 @@ format:
     classoption: [krantz2]
     fig-width: 6
     # fig-height: 9
-    # format-resources:
-    #   - latex/krantz.cls
+    format-resources:
+      - latex/krantz.cls
     hyperrefoptions: "bookmarks=false"
     links-as-notes: true
     colorlinks: false
@@ -62,15 +62,8 @@ format:
         \usepackage{fvextra}
         \DefineVerbatimEnvironment{Highlighting}{Verbatim}{breaklines,commandchars=\\\{\}}
         \frontmatter
-    include-before-body:
-      text: |
-        \RecustomVerbatimEnvironment{verbatim}{Verbatim}{
-          showspaces = false,
-          showtabs = false,
-          breaksymbolleft={},
-          breaklines
-          % Note: setting commandchars=\\\{\} here will cause an error 
-        }
+    include-before-body: latex/before_body.tex
+        
     # highlight-style: grayscale-custom.theme
     # include-in-header: latex/preamble.tex
     # include-before-body: latex/before_body.tex
