--- a/_quarto-website.yml
+++ b/_quarto-website.yml
@@ -8,6 +8,10 @@ format:
     author: "Nic Crane, Jonathan Keane, and Neal Richardson"
     reader-mode: true
     google-analytics: "G-4JT42QR6DV"
+    site-url: https://arrowrbook.com/
+    repo-url: https://github.com/arrowrbook/book/
+    repo-branch: main
+    repo-actions: [source, issue]
     page-footer:
       left: |
         Scaling Up With R and Arrow was written by Nic Crane, Jonathan Keane,
