--- a/_quarto.yml
+++ b/_quarto.yml
@@ -22,6 +22,10 @@ book:
     - references.qmd
   appendices:
   - appendix.qmd
+  google-analytics: 
+    tracking-id: "G-4JT42QR6DV"
+  site-url: https://arrowrbook.com/
+  repo-url: https://github.com/arrowrbook/book/
 
 bibliography: references.bib
 
